[gd_scene load_steps=2 format=3 uid="uid://bq8k3m7vwh2dp"]

[ext_resource type="Script" path="res://scripts/scyka_model_test.gd" id="1_scyka"]

[node name="ScykaModelTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scyka")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Scyka Animation Test"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Initializing..."
horizontal_alignment = 1

[node name="AnimationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Current: idle"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="IdleGroup" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/IdleGroup"]
layout_mode = 2
text = "Idle States:"

[node name="Idle" type="Button" parent="VBoxContainer/IdleGroup"]
layout_mode = 2
text = "Idle"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GameplayGroup" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/GameplayGroup"]
layout_mode = 2
text = "Gameplay:"

[node name="HoverPiece" type="Button" parent="VBoxContainer/GameplayGroup"]
layout_mode = 2
text = "Hover Piece"

[node name="SelectPiece" type="Button" parent="VBoxContainer/GameplayGroup"]
layout_mode = 2
text = "Select Piece"

[node name="PieceCaptured" type="Button" parent="VBoxContainer/GameplayGroup"]
layout_mode = 2
text = "Piece Captured"

[node name="Check" type="Button" parent="VBoxContainer/GameplayGroup"]
layout_mode = 2
text = "Check"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="WinGroup" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/WinGroup"]
layout_mode = 2
text = "Victory:"

[node name="WinEnter" type="Button" parent="VBoxContainer/WinGroup"]
layout_mode = 2
text = "Win Enter"

[node name="WinIdle" type="Button" parent="VBoxContainer/WinGroup"]
layout_mode = 2
text = "Win Idle"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LoseGroup" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/LoseGroup"]
layout_mode = 2
text = "Defeat:"

[node name="LoseEnter" type="Button" parent="VBoxContainer/LoseGroup"]
layout_mode = 2
text = "Lose Enter"

[node name="LoseIdle" type="Button" parent="VBoxContainer/LoseGroup"]
layout_mode = 2
text = "Lose Idle"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HelpLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "F1: Model State | F2: Animation List | F3: Motion Status | Mouse Wheel: Zoom"
horizontal_alignment = 1

[node name="ModelContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="VBoxContainer/IdleGroup/Idle" to="." method="_on_idle_pressed"]
[connection signal="pressed" from="VBoxContainer/GameplayGroup/HoverPiece" to="." method="_on_hover_piece_pressed"]
[connection signal="pressed" from="VBoxContainer/GameplayGroup/SelectPiece" to="." method="_on_select_piece_pressed"]
[connection signal="pressed" from="VBoxContainer/GameplayGroup/PieceCaptured" to="." method="_on_piece_captured_pressed"]
[connection signal="pressed" from="VBoxContainer/GameplayGroup/Check" to="." method="_on_check_pressed"]
[connection signal="pressed" from="VBoxContainer/WinGroup/WinEnter" to="." method="_on_win_enter_pressed"]
[connection signal="pressed" from="VBoxContainer/WinGroup/WinIdle" to="." method="_on_win_idle_pressed"]
[connection signal="pressed" from="VBoxContainer/LoseGroup/LoseEnter" to="." method="_on_lose_enter_pressed"]
[connection signal="pressed" from="VBoxContainer/LoseGroup/LoseIdle" to="." method="_on_lose_idle_pressed"]
